--- a/packages/jupyterlab-font-anonymous-pro/package.json
+++ b/packages/jupyterlab-font-anonymous-pro/package.json
@@ -36,7 +36,7 @@
     "typeface-anonymous-pro": "^1.1.13"
   },
   "devDependencies": {
-    "@deathbeds/jupyterlab-fonts": "file:./jupyterlab-fonts",
+    "@deathbeds/jupyterlab-fonts": "workspace:*",
     "@jupyterlab/builder": "^4.0.5"
   },
   "jupyterlab": {
