--- a/packages/_meta/package.json
+++ b/packages/_meta/package.json
@@ -6,10 +6,10 @@
     "build": "tsc -b",
     "watch": "jlpm build --watch --preserveWatchOutput"
   },
-  "dependencies": {
-    "@deathbeds/jupyterlab-font-anonymous-pro": "file:../jupyterlab-font-anonymous-pro",
-    "@deathbeds/jupyterlab-font-dejavu-sans-mono": "file:../jupyterlab-font-dejavu-sans-mono",
-    "@deathbeds/jupyterlab-font-fira-code": "file:../jupyterlab-font-fira-code",
-    "@deathbeds/jupyterlab-fonts": "file:../jupyterlab-fonts"
+  "devDependencies": {
+    "@deathbeds/jupyterlab-font-anonymous-pro": "workspace:*",
+    "@deathbeds/jupyterlab-font-dejavu-sans-mono": "workspace:*",
+    "@deathbeds/jupyterlab-font-fira-code": "workspace:*",
+    "@deathbeds/jupyterlab-fonts": "workspace:*"
   }
 }
