--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
       - uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: .github/locks/build_linux-64_lab4.0.conda.lock
+          environment-name: ci
 
       - name: cache (node)
         uses: actions/cache@v3
@@ -60,6 +61,7 @@ jobs:
       - uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: .github/locks/build_linux-64_lab4.0.conda.lock
+          environment-name: ci
 
       - name: cache (node)
         uses: actions/cache@v3
