--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,7 @@ env:
   MAMBA_NO_BANNER: 1
   # ours
   CACHE_EPOCH: 0
-
-defaults:
-  run:
-    shell: bash -l {0}
+  LIN_ACT: source /home/runner/micromamba/envs/ci/bin/activate && set -eux
 
 jobs:
   build:
@@ -42,10 +39,10 @@ jobs:
             ${{ env.CACHE_EPOCH }}-ubuntu-node-modules-${{ hashFiles('yarn.lock') }}
 
       - name: build
-        run: doit -n4 *:build:* || doit *:build:*
+        run: /home/runner/micromamba/envs/ci && doit -n4 *:build:* || doit *:build:*
 
       - name: dist
-        run: doit -n4 *:dist:* || doit *:dist:*
+        run: $LIN_ACT && doit -n4 *:dist:* || doit *:dist:*
 
       - name: upload (dist)
         uses: actions/upload-artifact@v3
@@ -74,7 +71,7 @@ jobs:
             ${{ env.CACHE_EPOCH }}-ubuntu-node-modules-${{ hashFiles('yarn.lock') }}
 
       - name: lint
-        run: doit -n4 *:lint:* || doit *:lint:*
+        run: $LIN_ACT && doit -n4 *:lint:* || doit *:lint:*
 
   # test:
   #   needs: [build]
