--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ env:
   MAMBA_NO_BANNER: 1
   # ours
   CACHE_EPOCH: 0
-  LIN_ACT: source /home/runner/micromamba/envs/ci/bin/activate && set -eux
+
 
 jobs:
   build:
@@ -26,7 +26,7 @@ jobs:
 
       - uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: .github/locks/build_linux-64_lab4.0.conda.lock
+          environment-file: .github/locks/lock_linux-64.conda.lock
           environment-name: ci
           init-shell: bash
 
@@ -39,10 +39,10 @@ jobs:
             ${{ env.CACHE_EPOCH }}-ubuntu-node-modules-${{ hashFiles('yarn.lock') }}
 
       - name: build
-        run: /home/runner/micromamba/envs/ci && doit -n4 *:build:* || doit *:build:*
+        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit -n4 *:build:* || doit *:build:*
 
       - name: dist
-        run: $LIN_ACT && doit -n4 *:dist:* || doit *:dist:*
+        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit -n4 *:dist:* || doit *:dist:*
 
       - name: upload (dist)
         uses: actions/upload-artifact@v3
@@ -58,7 +58,7 @@ jobs:
 
       - uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: .github/locks/build_linux-64_lab4.0.conda.lock
+          environment-file: .github/locks/lock_linux-64.conda.lock
           environment-name: ci
           init-shell: bash
 
@@ -71,7 +71,7 @@ jobs:
             ${{ env.CACHE_EPOCH }}-ubuntu-node-modules-${{ hashFiles('yarn.lock') }}
 
       - name: lint
-        run: $LIN_ACT && doit -n4 *:lint:* || doit *:lint:*
+        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit -n4 *:lint:* || doit *:lint:*
 
   # test:
   #   needs: [build]
