--- a/packages/_meta/package.json
+++ b/packages/_meta/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "tsc -b",
-    "watch": "jlpm build --watch --preserveWatchOutput"
+    "watch": "yarn build --watch --preserveWatchOutput"
   },
   "devDependencies": {
     "@deathbeds/jupyterlab-font-anonymous-pro": "workspace:*",
