--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,6 @@ env:
   MAMBA_NO_BANNER: 1
   # ours
   CACHE_EPOCH: 0
-  DOIT_LINUX: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit
 
 
 jobs:
@@ -40,19 +39,19 @@ jobs:
             ${{ env.CACHE_EPOCH }}-ubuntu-node-modules-${{ hashFiles('yarn.lock') }}
 
       - name: preflight
-        run: $DOIT_LINUX lock:preflight
+        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit lock:preflight
 
       - name: setup (js)
-        run: $DOIT_LINUX js-root:setup
+        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit js-root:setup
 
       - name: build
-        run: $DOIT_LINUX -n4 *:build:* || exit 0
+        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit -n4 *:build:* || exit 0
 
       - name: build (retry)
-        run: $DOIT_LINUX *:build:*
+        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit *:build:*
 
       - name: dist
-        run: $DOIT_LINUX *:dist:* || doit *:dist:*
+        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit *:dist:* || doit *:dist:*
 
       - name: upload (dist)
         uses: actions/upload-artifact@v3
@@ -94,7 +93,7 @@ jobs:
           path: ./build/locks
 
       - name: lint
-        run: $DOIT_LINUX -n4 *:lint:* || doit *:lint:*
+        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit -n4 *:lint:* || doit *:lint:*
 
   # test:
   #   needs: [build]
