--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -65,9 +65,27 @@
       ],
       "here": [
         "."
+      ],
+      "dist_pkg_json": [
+        "../../src/jupyterlab_fonts/_d/share/jupyter/labextensions/@deathbeds/jupyterlab-fonts/package.json"
       ]
     },
     "tasks": {
+      "ext": {
+        "actions": [
+          [
+            "::js-root::build_labext"
+          ]
+        ],
+        "file_dep": [
+          "::all_style",
+          "::js-root::tsbuildinfo",
+          "::js-root::yarn_history"
+        ],
+        "targets": [
+          "::dist_pkg_json"
+        ]
+      },
       "dist": {
         "meta": {
           "doitoml": {
