--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -66,20 +66,22 @@
       ]
     },
     "tasks": {
-      "ext": {
-        "actions": [
-          [
-            "::js-root::build_labext"
+      "build": {
+        "ext": {
+          "actions": [
+            [
+              "::js-root::build_labext"
+            ]
+          ],
+          "file_dep": [
+            "::all_style",
+            "::js-root::tsbuildinfo",
+            "::js-root::yarn_history"
+          ],
+          "targets": [
+            "::dist_pkg_json"
           ]
-        ],
-        "file_dep": [
-          "::all_style",
-          "::js-root::tsbuildinfo",
-          "::js-root::yarn_history"
-        ],
-        "targets": [
-          "::dist_pkg_json"
-        ]
+        }
       },
       "dist": {
         "meta": {
