--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,19 +39,19 @@ jobs:
             ${{ env.CACHE_EPOCH }}-ubuntu-node-modules-${{ hashFiles('yarn.lock') }}
 
       - name: preflight
-        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit lock:preflight
+        run: source /home/runner/micromamba/envs/ci/bin/activate && doit lock:preflight
 
       - name: setup (js)
-        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit js-root:setup
+        run: source /home/runner/micromamba/envs/ci/bin/activate && doit js-root:setup
 
       - name: build
-        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit -n4 *:build:* || exit 0
+        run: source /home/runner/micromamba/envs/ci/bin/activate && doit -n4 *:build:* || exit 0
 
       - name: build (retry)
-        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit *:build:*
+        run: source /home/runner/micromamba/envs/ci/bin/activate && doit *:build:*
 
       - name: dist
-        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit *:dist:* || doit *:dist:*
+        run: source /home/runner/micromamba/envs/ci/bin/activate && doit *:dist:* || doit *:dist:*
 
       - name: upload (dist)
         uses: actions/upload-artifact@v3
@@ -93,7 +93,7 @@ jobs:
           path: ./build/locks
 
       - name: lint
-        run: set -eux && source /home/runner/micromamba/envs/ci/bin/activate && doit -n4 *:lint:* || doit *:lint:*
+        run: source /home/runner/micromamba/envs/ci/bin/activate && doit -n4 *:lint:* || doit *:lint:*
 
   # test:
   #   needs: [build]
